fix: overflow: auto

--- a/deslrey-admin/src/pages/Admin/Article/index.module.scss
+++ b/deslrey-admin/src/pages/Admin/Article/index.module.scss
@@ -1,6 +1,7 @@
 .articleBox {
     height: 100%;
     width: 100%;
+    overflow: auto;
 
     .header {
         display: flex;
