--- a/deslrey-admin/src/pages/Admin/Image/index.module.scss
+++ b/deslrey-admin/src/pages/Admin/Image/index.module.scss
@@ -1,6 +1,7 @@
 .imageBox {
     height: 100%;
     width: 100%;
+    overflow: auto;
 
     .header {
         display: flex;
